unpackaged/main/default/objects/Integracion_EBS_Clientes__c/Integracion_EBS_Clientes__c.object-meta.xml
<CustomObject>
    <label>Integración EBS Clientes</label>
    <nameField>
        <displayFormat>IEBSC-{00000}</displayFormat>
        <label>Folio de Integración EBS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integraciones EBS Clientes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>