unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno__c</fullName>
    <label>Apellido Materno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>