unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Apellido_Paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno__c</fullName>
    <label>Apellido Paterno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>