unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <label>Calle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>