unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <label>Colonia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>