unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <label>CURP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>