unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Domicilio_Oficial__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Oficial__c</fullName>
    <label>Domicilio Oficial</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>