unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <label>Edad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>