unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>