unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Fecha_Escrituracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Escrituracion__c</fullName>
    <label>Fecha Escrituración</label>
    <type>Date</type>
</CustomField>