unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Fecha_Formalizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Formalizacion__c</fullName>
    <label>Fecha Formalización</label>
    <type>Date</type>
</CustomField>