unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Fideicomiso__c.field-meta.xml
<CustomField>
    <fullName>Fideicomiso__c</fullName>
    <label>Fideicomiso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>