unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <label>Fraccionamiento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>