unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Id_Cliente_AR__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente_AR__c</fullName>
    <label>Id Cliente AR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>