unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Id_Interfase__c.field-meta.xml
<CustomField>
    <fullName>Id_Interfase__c</fullName>
    <label>Id Interfase</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>