unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Id_Interfase_CRM__c.field-meta.xml
<CustomField>
    <fullName>Id_Interfase_CRM__c</fullName>
    <label>Id Interfase CRM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>