unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Id_Pago__c.field-meta.xml
<CustomField>
    <fullName>Id_Pago__c</fullName>
    <label>Id Pago</label>
    <length>30</length>
    <type>Text</type>
</CustomField>