unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Id_Proceso_AR__c.field-meta.xml
<CustomField>
    <fullName>Id_Proceso_AR__c</fullName>
    <label>Id Proceso AR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>