unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Ind_Exigible__c.field-meta.xml
<CustomField>
    <fullName>Ind_Exigible__c</fullName>
    <label>Ind Exigible</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>