unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <label>Interior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>