unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Lugar_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_Nacimiento__c</fullName>
    <label>Lugar Nacimiento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>