unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Metros_Terreno_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Metros_Terreno_Excedente__c</fullName>
    <label>Metros Terreno Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>