unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>