unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>