unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente__c</fullName>
    <label>Nombre Cliente</label>
    <length>200</length>
    <type>Text</type>
</CustomField>