unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Nombre_Referencia_3__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Referencia_3__c</fullName>
    <label>Nombre Referencia 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>