unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/NSS__c.field-meta.xml
<CustomField>
    <fullName>NSS__c</fullName>
    <label>NSS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>