unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Num_Proceso_AR__c.field-meta.xml
<CustomField>
    <fullName>Num_Proceso_AR__c</fullName>
    <label>Num Proceso AR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>