unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Numero_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Numero_Domicilio__c</fullName>
    <label>Número Domicilio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>