unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Numero_Interno__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interno__c</fullName>
    <label>Número Interno</label>
    <length>14</length>
    <type>Text</type>
</CustomField>