unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>Pais</label>
    <length>20</length>
    <type>Text</type>
</CustomField>