unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Integraciones_EBS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>