unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <label>Prototipo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>