unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Requisicion_CRM__c.field-meta.xml
<CustomField>
    <fullName>Requisicion_CRM__c</fullName>
    <label>Requisición CRM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>