unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Row_Id__c.field-meta.xml
<CustomField>
    <fullName>Row_Id__c</fullName>
    <label>Row Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>