unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <label>Sexo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>