unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Telefono_Celular__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular__c</fullName>
    <label>Teléfono Celular</label>
    <length>50</length>
    <type>Text</type>
</CustomField>