unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Telefono_Particular__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Particular__c</fullName>
    <label>Teléfono Particular</label>
    <length>50</length>
    <type>Text</type>
</CustomField>