unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Telefono_Ref_Otro_2__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Ref_Otro_2__c</fullName>
    <label>Teléfono Ref Otro 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>