unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Telefono_Referencia_2__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Referencia_2__c</fullName>
    <label>Teléfono Referencia 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>