unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Telefono_Referencia_3__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Referencia_3__c</fullName>
    <label>Teléfono Referencia 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>