unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Tipo_Credito__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Credito__c</fullName>
    <label>Tipo Crédito</label>
    <length>50</length>
    <type>Text</type>
</CustomField>