unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/Tipo_Lote__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Lote__c</fullName>
    <label>Tipo Lote</label>
    <length>50</length>
    <type>Text</type>
</CustomField>