unpackaged/main/default/objects/Integracion_EBS_Clientes__c/fields/UEN__c.field-meta.xml
<CustomField>
    <fullName>UEN__c</fullName>
    <label>UEN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>