unpackaged/main/default/objects/Integracion_EBS_Clientes__c/listViews/Integraciones_por_Fecha.listView-meta.xml
<ListView>
    <fullName>Integraciones_por_Fecha</fullName>
    <columns>NAME</columns>
    <columns>Nombre_Cliente__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Estatus_Integracion__c</columns>
    <columns>Requisicion_CRM__c</columns>
    <columns>Proceso_de_Venta__c</columns>
    <columns>Id_Cliente_AR__c</columns>
    <columns>Id_Proceso_AR__c</columns>
    <columns>Respuesta_API__c</columns>
    <filterScope>Everything</filterScope>
    <label>Integraciones por Fecha</label>
</ListView>